editor visual overhaul

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,3 +19,15 @@ h1 span {
     z-index: 2;
     cursor: default;
 }
+
+/* p {
+    font-family: 'Lora', serif;
+}
+
+h6 {
+    display: inline;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    line-height: normal;
+    font-size: 20;
+} */
