vertical scroll and export working

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 html {
     background-color: rgb(85, 85, 85);
+    overflow: hidden;
     /* background-image: url('./assets/sonder\ pop\ up.jpg'); */
 }
 
