--- a/frontend/src/pages/Edit.css
+++ b/frontend/src/pages/Edit.css
@@ -1,24 +1,11 @@
-#animatedBackground {
-    margin: 0 auto;
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: url('../assets/gray-texture2.png');
-    background-repeat: repeat;
-    background-position: 0 0;
-    background-size: auto 100%;
-  /*adjust s value for speed*/
-    animation: animatedBackground 500s linear infinite;
-  }
+.container-paper {
+  min-height: 100vh;
+  min-width: 100vh;
+  overflow-y: auto;
+}
 
-  @keyframes animatedBackground {
-    from {
-      background-position: 0 0;
-    }
-  /*use negative width if you want it to flow right to left else and positive for left to right*/
-    to {
-      background-position: 0 -10000px;
-    }
-  }
+.frame-container {
+  display: flex;
+  flex-direction: row;
+  background-attachment: fixed;
+}
