--- a/frontend/src/components/user/Text.css
+++ b/frontend/src/components/user/Text.css
@@ -1,8 +1,4 @@
-p {
-    font-family: 'Lora', serif;
-}
-
-h6 {
+/* h6 {
     display: block;
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
@@ -12,3 +8,8 @@ h6 {
     margin-right: 0;
     font-size: 20;
 }
+
+h2 {
+    font-family: 'saonara', serif;
+    letter-spacing: 4.5px;
+} */
