--- a/frontend/src/components/filters/FilmGrain.css
+++ b/frontend/src/components/filters/FilmGrain.css
@@ -3,6 +3,7 @@
     background-image: url("broken_noise_@2X.png");
     background: rgb(0, 0, 0);
     background: linear-gradient(25deg, rgb(0, 0, 0) 0%, rgb(14, 14, 14) 80%, rgb(16, 16, 16) 100%);
+    overflow-y: hidden;
   }
   
   .film-grain:before {
