--- a/frontend/src/pages/Edit.css
+++ b/frontend/src/pages/Edit.css
@@ -1,14 +1,16 @@
-.frame-container {
+/* .frame-container {
   display: flex;
   flex-direction: row;
+  margin: auto;
   background-attachment: fixed;
-  /* transform: scale(0.75); */
-}
+} */
 
 .container-paper {
+  /* position: absolute;
+  right: 10vw;
+  height: 70vh;
   margin-top: 9vh;
-  min-height: 90vh;
-  min-width: 85vw;
+  min-width: 80vw; */
   overflow-y: auto;
   overflow-x: hidden;
 }
