--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,7 @@
-html {
+/* html {
     background-color: rgb(85, 85, 85);
     overflow: hidden;
-    /* background-image: url('./assets/sonder\ pop\ up.jpg'); */
-}
+} */
 
 h1 {
     font-family: 'Arimo', sans-serif;
