--- a/frontend/src/components/user/Heading/Heading.css
+++ b/frontend/src/components/user/Heading/Heading.css
@@ -1,17 +1,34 @@
-h4 {
-    font-family: 'brown_fox';
-}
-
-h6 {
-    font-family: 'basier_square_monoregular';
-}
-
 h2 {
     font-family: 'saonara';
+    font-size: 1em;
+    margin: 0;
     letter-spacing: 7.5px;
+}
+
+h4 {
+    font-family: 'brown_fox';
+    font-size: 1em;
+    margin: 0;
 }
 
 h5 {
     font-family: 'maragsa';
+    font-size: 1em;
+    margin: 0;
     letter-spacing: 1.5px;
+}
+
+h6 {
+    font-family: 'basier_square_monoregular';
+    font-size: 1em;
+    margin: 0;
+}
+
+#font-select {
+    margin: 0 auto;
+    padding-left: 8px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+    background-color: #cbcbcb;
+    text-align: center;
+    height: 26px;
 }
