--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,10 @@
 body {
+  background-color: #000000;
+}
+
+html, body, #root, .App {
   height: 100%;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -36,11 +41,6 @@ code {
 }
 
 @font-face {
-  font-family: 'archiv_grotesk';
-  src: url('./assets/fonts/ArchivGroteskTrial-RegularTrial.otf') format('opentype');
-}
-
-@font-face {
   font-family: 'tomato_soup';
   src: url('./assets/fonts/TomatoSoup-Regular.otf') format('opentype');
 }
@@ -53,4 +53,14 @@ code {
 @font-face {
   font-family: 'maragsa';
   src: url('./assets/fonts/Maragsa-Display.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'resist_sans_light';
+  src: url('./assets/fonts/ResistSansTextLight.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'resist_sans_medium';
+  src: url('./assets/fonts/ResistSansMediumOblique.otf') format('opentype');
 }
